# updateprocessor

./: .gitignore  .gitmodules  CMakeLists.txt  apk_manager.cpp  apk_manager.h  apk_uploader.cpp  apk_uploader.h  bds_checker.py  discord.cpp  discord.h  discord_gateway.cpp  discord_gateway.h  discord_state.cpp  discord_state.h  file_utils.cpp  file_utils.h  job_manager.cpp  job_manager.h  main.cpp  play_device.cpp  play_device.h  play_manager.cpp  play_manager.h  requirements.txt  telegram.cpp  telegram.h  telegram_state.cpp  telegram_state.h  wake_on_lan.cpp  wake_on_lan.h  win10_store_manager.cpp  win10_store_manager.h  win10_store_network.cpp  win10_store_network.h  win10_versiondb_manager.cpp  win10_versiondb_manager.h
cmake/: FindLibgit2.cmake
job_worker/: apk_job.py  archive.py  config.py  framework.py  ida_analysis.py  ida_job.py  log_client.py  main.py
log_viewer/: main.py
log_viewer/static/: index.html
tool/: get_w10_token.cpp  pull_job.py
